Add MSE threshold for EM

--- a/TME_IC_Saito2008/V1/TME_IC.ipynb
+++ b/TME_IC_Saito2008/V1/TME_IC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -36,48 +36,48 @@
       "  (2, 3)\t0.4\n",
       "  (2, 4)\t0.6\n",
       "Random Graph\n",
-      "  (0, 1)\t0.6180685\n",
-      "  (0, 2)\t0.4229839\n",
-      "  (0, 3)\t0.86237955\n",
-      "  (0, 4)\t0.23280615\n",
-      "  (0, 5)\t0.3271042\n",
-      "  (0, 6)\t0.9036698\n",
-      "  (1, 0)\t0.053995\n",
-      "  (1, 2)\t0.65214217\n",
-      "  (1, 3)\t0.5931676\n",
-      "  (1, 4)\t0.74915045\n",
-      "  (1, 5)\t0.853278\n",
-      "  (1, 6)\t0.017607015\n",
-      "  (2, 0)\t0.3747932\n",
-      "  (2, 1)\t0.6724424\n",
-      "  (2, 3)\t0.2704413\n",
-      "  (2, 4)\t0.5178566\n",
-      "  (2, 5)\t0.1375238\n",
-      "  (2, 6)\t0.09495177\n",
-      "  (3, 0)\t0.31038502\n",
-      "  (3, 1)\t0.9630717\n",
-      "  (3, 2)\t0.75990295\n",
-      "  (3, 4)\t0.13750456\n",
-      "  (3, 5)\t0.6490644\n",
-      "  (3, 6)\t0.47963157\n",
-      "  (4, 0)\t0.2674974\n",
-      "  (4, 1)\t0.61191833\n",
-      "  (4, 2)\t0.8299125\n",
-      "  (4, 3)\t0.16778144\n",
-      "  (4, 5)\t0.031052746\n",
-      "  (4, 6)\t0.73905456\n",
-      "  (5, 0)\t0.13553852\n",
-      "  (5, 1)\t0.85521525\n",
-      "  (5, 2)\t0.0031188752\n",
-      "  (5, 3)\t0.74759\n",
-      "  (5, 4)\t0.614732\n",
-      "  (5, 6)\t0.7110168\n",
-      "  (6, 0)\t0.100177094\n",
-      "  (6, 1)\t0.7245161\n",
-      "  (6, 2)\t0.91887635\n",
-      "  (6, 3)\t0.40120974\n",
-      "  (6, 4)\t0.90008336\n",
-      "  (6, 5)\t0.7056607\n"
+      "  (0, 1)\t0.03156902\n",
+      "  (0, 2)\t0.49405158\n",
+      "  (0, 3)\t0.6980423\n",
+      "  (0, 4)\t0.33177012\n",
+      "  (0, 5)\t0.026152728\n",
+      "  (0, 6)\t0.8809852\n",
+      "  (1, 0)\t0.5689927\n",
+      "  (1, 2)\t0.49533373\n",
+      "  (1, 3)\t0.4199267\n",
+      "  (1, 4)\t0.54160166\n",
+      "  (1, 5)\t0.5550246\n",
+      "  (1, 6)\t0.15587775\n",
+      "  (2, 0)\t0.3220729\n",
+      "  (2, 1)\t0.66631955\n",
+      "  (2, 3)\t0.32078075\n",
+      "  (2, 4)\t0.22548972\n",
+      "  (2, 5)\t0.26092488\n",
+      "  (2, 6)\t0.6807767\n",
+      "  (3, 0)\t0.4706855\n",
+      "  (3, 1)\t0.51292473\n",
+      "  (3, 2)\t0.39657506\n",
+      "  (3, 4)\t0.9988955\n",
+      "  (3, 5)\t0.8106461\n",
+      "  (3, 6)\t0.73198074\n",
+      "  (4, 0)\t0.76005745\n",
+      "  (4, 1)\t0.48004043\n",
+      "  (4, 2)\t0.86843073\n",
+      "  (4, 3)\t0.0057362984\n",
+      "  (4, 5)\t0.42348614\n",
+      "  (4, 6)\t0.98618335\n",
+      "  (5, 0)\t0.073831804\n",
+      "  (5, 1)\t0.0012110415\n",
+      "  (5, 2)\t0.26615423\n",
+      "  (5, 3)\t0.40700644\n",
+      "  (5, 4)\t0.41676894\n",
+      "  (5, 6)\t0.62926596\n",
+      "  (6, 0)\t0.03957735\n",
+      "  (6, 1)\t0.45346314\n",
+      "  (6, 2)\t0.4625029\n",
+      "  (6, 3)\t0.9781842\n",
+      "  (6, 4)\t0.29001147\n",
+      "  (6, 5)\t0.59078664\n"
      ]
     }
    ],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,14 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{0: 0, 1: 1, 2: 1, 3: 2}, {0: 0, 1: 1, 3: 2}, {0: 0, 1: 1, 2: 1, 3: 2, 4: 2}]\n"
+      "[{0: 0, 1: 1, 3: 2}, {0: 0, 1: 1, 2: 1, 4: 2}, {0: 0, 2: 1, 4: 2}]\n"
      ]
     }
    ],
@@ -224,15 +224,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{0: 0, 1: 1, 2: 1, 3: 2}, {0: 0, 1: 1, 3: 2}] \n",
-      " [[[0], [1, 2], [3]], [[0], [1], [3]]]\n"
+      "[{0: 0, 1: 1, 3: 2}, {0: 0, 1: 1, 2: 1, 4: 2}] \n",
+      " [[[0], [1], [3]], [[0], [1, 2], [4]]]\n"
      ]
     }
    ],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def MSE(g1,g2):\n",
+    "    '''calcule la mean square error entre 2 graphes '''\n",
+    "    assert g1.shape == g2.shape\n",
+    "    return np.sum((g1-g2).power(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -423,16 +435,16 @@
      "text": [
       "{0, 1, 2, 3, 4}\n",
       "  (0, 1)\t0.59\n",
-      "  (0, 2)\t0.575\n",
-      "  (1, 3)\t0.64903605\n",
-      "  (1, 4)\t9.652191e-26\n",
-      "  (2, 3)\t0.4319291\n",
-      "  (2, 4)\t0.6\n"
+      "  (0, 2)\t0.515\n",
+      "  (1, 3)\t0.5356452\n",
+      "  (1, 4)\t0.00023212147\n",
+      "  (2, 3)\t0.45048556\n",
+      "  (2, 4)\t0.6212585\n"
      ]
     }
    ],
    "source": [
-    "def EM_IC(D,nodes,debug = False):\n",
+    "def EM_IC(D,nodes,threshold = 10**(-7),debug = False):\n",
     "        # initalisation\n",
     "    g = randomGraph(nodes)    \n",
     "    p_sw = None\n",
@@ -442,16 +454,21 @@
     "    \n",
     "    if debug:\n",
     "        ll = -float(\"inf\") # ll : loglikelyhood\n",
-    "        \n",
-    "    for i in range(100):\n",
+    "    \n",
+    "    loop = True\n",
+    "    while loop:\n",
     "        p_sw = Expectation(g,D)\n",
-    "        g = Maximisation(g,D_plus_id,D_minus_len,p_sw)\n",
+    "        next_g = Maximisation(g,D_plus_id,D_minus_len,p_sw)\n",
+    "        \n",
+    "        loop = MSE(g,next_g) > threshold\n",
+    "        g = next_g\n",
     "        \n",
     "        if debug : \n",
     "            new_ll = llikelyhood(g,D)\n",
     "            if new_ll < ll : \n",
     "                print(f\"Likelyhood Error : descreasing : from {ll} to {new_ll}\")\n",
     "            ll = new_ll\n",
+    "            \n",
     "    return g\n",
     "\n",
     "nodes = set()\n",
@@ -460,7 +477,7 @@
     "print(nodes)\n",
     "\n",
     "D = [cascade_repr(c) for c in cascades]\n",
-    "finalGraph = EM_IC(D,nodes,True)\n",
+    "finalGraph = EM_IC(D,nodes,debug=True)\n",
     "print(finalGraph)"
    ]
   },
@@ -480,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -592,18 +609,18 @@
      "output_type": "stream",
      "text": [
       "  (0, 1)\t0.59\n",
-      "  (0, 2)\t0.575\n",
-      "  (0, 3)\t4.1101425e-06\n",
-      "  (0, 4)\t4.25779e-16\n",
-      "  (1, 3)\t0.64903504\n",
-      "  (1, 4)\t7.6382287e-16\n",
-      "  (2, 3)\t0.4319261\n",
-      "  (2, 4)\t0.6\n"
+      "  (0, 2)\t0.515\n",
+      "  (0, 3)\t0.31027412\n",
+      "  (0, 4)\t0.2654719\n",
+      "  (1, 3)\t0.50248927\n",
+      "  (1, 4)\t0.31386676\n",
+      "  (2, 3)\t0.24735372\n",
+      "  (2, 4)\t0.3194314\n"
      ]
     }
    ],
    "source": [
-    "def EM_IC_2(D,nodes, debug=False):\n",
+    "def EM_IC_2(D,nodes,threshold=10**(-7), debug=False):\n",
     "    g = randomGraph(nodes)    \n",
     "    p_sw = None\n",
     "    D_plus_id =   {v:{u:D_plus_uv_id2(D,v,u) for u in nodes} for v in nodes}\n",
@@ -613,9 +630,13 @@
     "    if (debug):\n",
     "        ll = -float('inf')\n",
     "    \n",
-    "    for i in range(60):\n",
+    "    loop = True\n",
+    "    while loop:\n",
     "        p_sw = Expectation2(g,D)\n",
-    "        g = Maximisation(g,D_plus_id,D_minus_len,p_sw)\n",
+    "        g_next = Maximisation(g,D_plus_id,D_minus_len,p_sw)\n",
+    "        \n",
+    "        loop = MSE(g,g_next)<threshold\n",
+    "        g = g_next\n",
     "        \n",
     "        if debug : \n",
     "            new_ll = llikelyhood_notContiguous(g,D)\n",
@@ -626,7 +647,7 @@
     "    return g\n",
     "\n",
     "D = [cascade_repr(c) for c in cascades]\n",
-    "finalGraph = EM_IC_2(D,nodes,True)\n",
+    "finalGraph = EM_IC_2(D,nodes,debug=True)\n",
     "print(finalGraph)"
    ]
   },
@@ -660,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,15 +722,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "original  graph MAP score :  0.9480277777777778\n",
-      "inference graph MAP score :  0.94025\n"
+      "original  graph MAP score :  0.9361875000000001\n",
+      "inference graph MAP score :  0.9292430555555556\n"
      ]
     }
    ],
@@ -727,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,15 +776,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "original  graph MAP score :  0.9538477381403271\n",
-      "predictedGraph MAP score :  0.8455313366268303\n"
+      "original  graph MAP score :  0.9611435751823965\n",
+      "predictedGraph MAP score :  0.812665544932929\n"
      ]
     }
    ],
